[package]
name = "sbc-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
ureq = { version = "2.0", features = ["json", "tls"] }
nix = { version = "0.27", features = ["signal", "process"] }
log = "0.4"
env_logger = "0.10"
ctrlc = "3.4"
chrono = { version = "0.4", features = ["clock"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
